--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/listadoCarreras.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/listadoCarreras.html.twig
@@ -32,6 +32,7 @@
                   <input id="finCiclo-Carrera_{{datosCarrera.id_sa_carrera}}" value="{{datosCarrera.fecha_fin}}" type="hidden" >
                   <input id="Ciclo-Descripcion_{{datosCarrera.id_sa_carrera}}" value="{{datosCarrera.ciclo_descripcion}}" type="hidden" >
                   <input id="nombre-Carrera_{{datosCarrera.id_sa_carrera}}" value="{{datosCarrera.nombre}}" type="hidden" >
+                  <input id="idCiclo-Carrera_{{datosCarrera.id_sa_carrera}}" value="{{datosCarrera.id_sa_ciclo_detalle}}" type="hidden" >
                   <div id="panelCentralCarrera-{{datosCarrera.id_sa_carrera}}" class="panel panel-default">
 
                     <div class="panel-heading">
