--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/editarPerfil.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/editarPerfil.html.twig
@@ -98,6 +98,10 @@
          opacity: 0;
          filter: alpha(opacity=0);
       }
+      
+      a#explicacionFoto {
+         color: #003366;
+      }
    </style>
    <script type="text/javascript">
       var modelessPerfilEditar = new $.flavr({
@@ -105,7 +109,37 @@
                                        content : '<i class="fa fa-refresh fa-spin"></i> &nbsp;<b>Cargando...</b>',
                                        buttons     : {}
                                     });
+   </script>
+   <script src="{{ asset('js/jqueryValidate/dist/jquery.validate.min.js') }}"></script>
+   <script src="{{ asset('js/jqueryValidate/dist/additional-methods.js') }}"></script>
+   <script>
+      $.validator.addMethod(
+         "EcuadorDate",
+         function(value, element) {
+             return value.match(/^\d\d?\/\d\d?\/\d\d\d\d$/);
+         },
+         "Por favor ingrese una fecha en el formato dd/mm/yyyy."
+      );
+      
+      $("#formEditarPerfil").validate({
+                    
+			rules: {
+            fecha_nacimiento: { required: true, EcuadorDate : true },
+				direccion: "required",
+            telefono: { required: true, number: true,max: 10 },
+            correo_personal: { required: true, email: true },
+            correo_institucional: { required: true, email: true },
+				agree: "required"
+			},
+			messages: {
+				direccion: {required:"Por favor ingrese una direción."},
+				telefono: {required:"Ingrese un numero de telefono válido", number: 'Debe ingresar un número',max: 'el numero ingresado es máximo 10 dígitos.'},
+				email: "Por favor ingrese una dirección de correo valida.",
+				agree: "Please accept our policy"
+			}
+		});
    </script>                                          
+   
    <link type="text/css" rel="stylesheet" href="{{ asset('theme/plugins/datatables/dataTables.bootstrap.css') }}">
    
    <script type="text/javascript">
@@ -170,8 +204,13 @@
                      Se presentaron problemas para cargar la información de su perfil.
                   </div>
                   {% else %}
+                     {% if(dataUsuario.existefotoperfil == 1) %}
+                        {% set fotoPerfil = dataUsuario.directoriofoto %}
+                     {% else %}
+                        {% set fotoPerfil = 'images/avatar/user.png' %}
+                     {% endif %}
                   <form id="formEditarPerfil" name="formEditarPerfil">
-                     <img class="profile-user-img img-responsive img-circle" src="{{ asset('images/avatar/user.png')}}" alt="User profile picture">
+                     <img class="profile-user-img img-responsive img-circle" src="{{ asset(''~ fotoPerfil ~'')}}" alt="Foto de Perfil">
                      <h3 class="profile-username text-center">{{dataUsuario.nombres}} <br/>{{dataUsuario.apellidos}}</h3>
                      <p class="text-muted text-center">C.I.: {{dataUsuario.usuario}}</p>
                      <div class="box-header with-border">
@@ -179,12 +218,12 @@
                      </div>
                      <div class="row item-edit-usuario data-edit">
                         <div class="col-xs-4 cel-data-edit">
-                           <b><i class="fa fa-camera margin-r-5"></i> Nueva Foto del Perfil</b> <i class="fa fa-question-circle" style="font-size: 19px; margin-left: 20px;"></i>
+                           <b><i class="fa fa-camera margin-r-5"></i> Nueva Foto del Perfil</b> <a id="explicacionFoto" href="" class="tip btn-circle"><span>Fotos tamaño <b>Carnet</b> con extensión <b>jpg</b> o <b>png</b></span><i class="fa fa-question-circle" style="font-size: 19px; margin-left: 20px;"></i></a>
                         </div>
                         <div class="col-xs-8">
                            <div id="espacioInputFile" class="fileUpload btn btn-primary">
                               <span>Seleccionar Foto</span>
-                              <input id="imagen_perfil" name="imagen_perfil" type="file" placeholder="Foto" class="pull-right form-control upload" style="padding: 0 7px;" />
+                              <input id="imagen_perfil" name="imagen_perfil" type="file" placeholder="Foto" class="pull-right form-control upload" style="padding: 0 7px;" accept=".jpg,.png"/>
                            </div>
                            <div id="previewImg">
                                  <div>Vista Preliminar:</div>
@@ -313,6 +352,10 @@
    <script type="text/javascript">
       var modelessGrabarPerfil;
       
+      $("#explicacionFoto").on('click', function(event){
+         event.preventDefault();
+      });
+      
       $( "#fecha_nacimiento" ).datepicker({ format: 'dd/mm/yyyy' });
       //$( "#fecha_nacimiento" ).val('{{dataUsuario.fecha_nacimiento}}');
       $( "#fecha_nacimiento" ).datepicker('update');
@@ -352,16 +395,28 @@
                });
             },
             success:  function (dataResponse) {
-               console.log(dataResponse.idMensaje);
-               console.log(dataResponse.infoMensaje);
+               var mensajeResultado = '';
+               if(dataResponse.idMensaje==='1') {
+                  mensajeResultado = 'Su información de actualizó correctamente.';
+                  if(dataResponse.imagenGrabada === 0 || dataResponse.imagenGrabada === -1) {
+                     mensajeResultado += "<br><br><b>Atención:<b> Se presentaron problemas para actualizar su foto de perfil.";
+                  }
+               }
+               else {
+                  mensajeResultado = 'Se presentaron problemas para actualizar su información';
+               }
                $("#grabarDataPerfil").html("<b>Actualizar la información del perfil</b>");
                modelessGrabarPerfil = new $.flavr({
                   modal   : true,
-                  content : '<div class="mensajeExito">'+dataResponse.infoMensaje+'</div>',
+                  content : '<div class="mensajeExito">'+mensajeResultado+'</div>',
                   buttons : {
                         primary : { text: 'Aceptar', style: 'primary' }
                   }
                });
+               
+               if(dataResponse.imagenGrabada == 1) {
+                  location.reload();
+               }
             },
             dataType:'json'
          });      
