--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/menu_principal.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/menu_principal.html.twig
@@ -108,19 +108,22 @@
             </li>
           </ul>
         </li>
-
-
+        
+        {% set fotoPerfil = app.session.get('img_perfil') %}
+        {% if fotoPerfil|length == 0 %}
+           {% set fotoPerfil = 'images/avatar/user.png' %}
+        {% endif %}
         <!-- User Account: style can be found in dropdown.less -->
         <li class="dropdown user user-menu">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
 
-            <img src="{{ asset('theme/dist/img/user2-160x160.jpg')}}" class="user-image" alt="User Image">
+            <img src="{{ asset(''~fotoPerfil~'')}}" class="user-image" alt="User Image">
             <span class="hidden-xs" style="text-transform: capitalize !important;">{{app.session.get('nom_usuario')}}</span>
           </a>
           <ul class="dropdown-menu">
             <!-- User image -->
             <li class="user-header">
-              <img src="{{ asset('theme/dist/img/user2-160x160.jpg')}}" class="img-circle" alt="User Image">
+              <img src="{{ asset(''~fotoPerfil~'')}}" class="img-circle" alt="User Image">
 
               <p>{{app.session.get('nom_usuario')}}
               <small>{{app.session.get('cedula')}}</small>
