--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/visualizarPerfil.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/visualizarPerfil.html.twig
@@ -44,7 +44,12 @@
                      Se presentaron problemas para cargar la información de su perfil.
                   </div>
                   {% else %}
-                  <img class="profile-user-img img-responsive img-circle" src="{{ asset('images/avatar/user.png')}}" alt="User profile picture">
+                     {% if(dataUsuario.existefotoperfil == 1) %}
+                        {% set fotoPerfil = dataUsuario.directoriofoto %}
+                     {% else %}
+                        {% set fotoPerfil = 'images/avatar/user.png' %}
+                     {% endif %}
+                  <img class="profile-user-img img-responsive img-circle" src="{{ asset(''~ fotoPerfil ~'')}}" alt="User profile picture">
                   <h3 class="profile-username text-center">{{dataUsuario.nombres}}<br/>{{dataUsuario.apellidos}}</h3>
                   <p class="text-muted text-center">C.I.: {{dataUsuario.usuario}}</p>
 
