--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/base.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/base.html.twig
@@ -113,9 +113,9 @@
 
 
 <script type="text/javascript">
-  $(function () {
-           TableAdvanced.init();          
-    });  
+  // $(function () {
+  //          TableAdvanced.init();          
+  //   });  
 </script>
 
   {#  notificaciones   #}
