--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/admin_listado_anulacion_detalle.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/admin_listado_anulacion_detalle.html.twig
@@ -69,7 +69,7 @@
                                 {
                                     valida=valida+1;
 
-                                    $(this).children("td").each(function (index) 
+                                    $(this).children("td").each(function (index2) 
                                     {
                                         Celda=$(this).attr("id");
                                         Celda=Celda.split("_");
