--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/base.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/base.html.twig
@@ -113,9 +113,9 @@
 
 
 <script type="text/javascript">
-  // $(function () {
-  //          TableAdvanced.init();          
-  //   });  
+{#   $(function () {
+            TableAdvanced.init();          
+     });#}  
 </script>
 
   {#  notificaciones   #}
@@ -128,7 +128,7 @@
   <script src="{{ asset('Scripts_notificaciones/layout.js') }}" type="text/javascript"></script>
   <script src="{{ asset('Scripts_notificaciones/quick-sidebar.js') }}" type="text/javascript"></script>
   <script src="{{ asset('Scripts_notificaciones/demo.js') }}" type="text/javascript"></script>
-  <script src="{{ asset('Scripts_notificaciones/table-advanced.js') }}"></script>
+  {#<script src="{{ asset('Scripts_notificaciones/table-advanced.js') }}"></script>#}
   <script src="{{ asset('Scripts_notificaciones/form-wizard.js') }}"></script>
   <script src="{{ asset('js_notificaciones/components-pickers.js') }}"></script>
   {#  notificaciones   #}
