--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/base.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/base.html.twig
@@ -112,11 +112,7 @@
   <script src="{{ asset('theme/plugins/flot/jquery.flot.categories.min.js') }}"></script>
 
 
-<script type="text/javascript">
-  // $(function () {
-  //          TableAdvanced.init();          
-  //   });  
-</script>
+
 
   {#  notificaciones   #}
   <script type="text/javascript" src="{{ asset('js_notificaciones/datatables/media/js/jquery.dataTables.min.js') }}"></script>
@@ -142,6 +138,12 @@
      
     });  
 </script>
+
+{#<script type="text/javascript">
+   $(function () {
+          TableAdvanced.init();          
+     });  
+</script>#}
     {% endblock %}
   </body>
 </html>
