--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Notificaciones/eventos_universidad.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Notificaciones/eventos_universidad.html.twig
@@ -1,5 +1,10 @@
 {% extends 'TitulacionSisAcademicoBundle:Home:index.html.twig' %}
 {% block contenido %}
+      <script type="text/javascript">
+   $(function () {
+          TableAdvanced.init();          
+     });  
+</script>
     <script src="{{ asset('js/EnviarMensajes.js') }}"></script>
     <script src="{{ asset('js/ValidacionesNotificaciones.js') }}"></script>
 <script src="{{ asset('theme/plugins/jQuery/jQuery-2.1.4.min.js') }}"></script>
