--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/cambio_password.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/cambio_password.html.twig
@@ -64,6 +64,24 @@
   setTimeout('login();',1000);
 });
 
+  function valideKey(evt)
+    {
+      var code = (evt.which) ? evt.which : evt.keyCode;
+      if(code==8)
+      {
+          //backspace
+          return true;
+      }
+      else if(code>=48 && code<=57)
+      {
+          //is a number
+          return true;
+      }
+      else
+      {
+          return false;
+      }
+  }
 
 var btn_login = 0;
 
@@ -121,14 +139,15 @@ function login(stringvalue){
           '<div class="cambioContrasenia">' +
           '<p>Estimado Usuario, la clave ingresada debe considerar los siguientes requisitos.<br /></p>' +
           '<p>&nbsp;&nbsp;-  El primer carácter debe ser alfanumérico en mayúsculas</p>' +
-          '<p>&nbsp;&nbsp;-  Longitud 8 caracteres que contengan al menos tres de las siguientes caracteristicas:<br /></p>' +
+          '<p>&nbsp;&nbsp;-  Longitud 8 caracteres que contengan las siguientes caracteristicas:<br /></p>' +
           '<ul><li>  Letras abecedario Mayúsculas (A-Z).</li>' +
           '<li>  Letras abecedario minúsculas (a-z).</li>' +
-          '<li>  Números (0-9) o Caracteres especiales.</li></ul><br/></div>' ;  
+          '<li>  Números (0-9). </li>' +
+          '<li>  Caracteres especiales.</li></ul><br/></div>' ;  
           var html =
           '<div class="flavr-message"> Usuario:</div>'+
           '<div class="form-row">' +
-          '<input id="usuario" type="text" name="usuario" maxlength="10"' +
+          '<input id="usuario" type="text" name="usuario" onkeypress="return valideKey(event);" maxlength="10"' +
           'placeholder="Usuario"  required /> <p class="help-block"></p>' +
           '</div>' +
           '<div class="flavr-message"> Ingrese Contraseña:</div>'+
