--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/cambio_password_interno.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/cambio_password_interno.html.twig
@@ -21,12 +21,13 @@
               <p>Estimado Usuario, la clave ingresada debe considerar los siguientes requisitos.<br />
               </p>
               <p>&nbsp;&nbsp;-  El primer carácter debe ser alfanumérico en mayúsculas</p>
-              <p>&nbsp;&nbsp;-  Longitud 8 caracteres que contengan al menos tres de las siguientes caracteristicas:<br />
+              <p>&nbsp;&nbsp;-  Longitud 8 caracteres que contengan las siguientes caracteristicas:<br />
               </p>
               <ul>
                 <li>  Letras abecedario Mayúsculas (A-Z).</li>
                 <li>  Letras abecedario minúsculas (a-z).</li>
-                <li>  Números (0-9) o Caracteres especiales.</li>
+                <li>  Números (0-9). </li>
+                <li>  Caracteres especiales.</li>
               </ul>
               <br/>
             </div>
