--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/cambio_password.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/cambio_password.html.twig
@@ -27,6 +27,7 @@
 
 <style type="text/css">
 
+.progress{float: right;width: 222px !important;margin-top: -23px !important;}
 .flavr-container .flavr-fixer .flavr-outer .flavr-content .flavr-message form input {
   width: 50% !important;
   float: right !important;
