--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/consultaEstudiantesXCarrera.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/consultaEstudiantesXCarrera.html.twig
@@ -26,7 +26,7 @@
             <div id="parametrosBusqueda_{{ carrera.idCarrera }}" class="col-lg-12">
               <div class="col-lg-6" style="margin-bottom: 20px;">
                 <div class="col-lg-5" style="padding-top: 6px; font-weight: bold;">Identificación Estudiante:</div>
-                <div class="col-lg-4" style="padding-top: 3px;"><input type="text" id="ident_{{ carrera.idCarrera }}"maxlength="10"></div>
+                <div class="col-lg-4" style="padding-top: 3px;"><input type="text"  onkeypress="return valideKey(event);" id="ident_{{ carrera.idCarrera }}"maxlength="10"></div>
                 <div class="col-lg-2"> <a id="buscarEstudiante_{{ carrera.idCarrera }}" class="btn btn-primary">BUSCAR</a></div>
 
               </div>
@@ -89,6 +89,26 @@
 
 
 <script type="text/javascript">
+
+  function valideKey(evt)
+    {
+      var code = (evt.which) ? evt.which : evt.keyCode;
+      if(code==8)
+      {
+          //backspace
+          return true;
+      }
+      else if(code>=48 && code<=57)
+      {
+          //is a number
+          return true;
+      }
+      else
+      {
+          return false;
+      }
+  }
+
   $(document).ready(function() { 
     $('.tabscarrera').click(function() {
       var splitCarrera =$(this).attr('id').split('_');
