--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/consulta_materia_aprobadas_estudiantes.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/consulta_materia_aprobadas_estudiantes.html.twig
@@ -21,7 +21,7 @@
                 <div class="col-lg-7" style="margin-bottom: 20px;">
                   <div class="col-lg-4" style="padding-top: 7px; font-weight: bold;" id="txt_nombre_{{ carrera.idCarrera }}">&nbsp;</div>
                   <div class="col-lg-1" style="padding-top: 7px;">Cédula:  </div>
-                  <div class="col-lg-3" style="padding-top: 5px;"><input type="text" id="ident_{{ carrera.idCarrera }}" maxlength="10" ></div>
+                  <div class="col-lg-3" style="padding-top: 5px;"><input type="text" id="ident_{{ carrera.idCarrera }}" onkeypress="return valideKey(event);" maxlength="10" ></div>
                   <div class="col-lg-1"><button type="button" id="btn_buscar_{{ carrera.idCarrera }}" class="btn btn-primary" >Buscar</button></div>
                 </div>
                 <div class="col-lg-5" style="margin-bottom: 20px;">
@@ -76,6 +76,26 @@
 
 
 <script type="text/javascript">
+
+  function valideKey(evt)
+      {
+      var code = (evt.which) ? evt.which : evt.keyCode;
+      if(code==8)
+      {
+          //backspace
+          return true;
+      }
+      else if(code>=48 && code<=57)
+      {
+          //is a number
+          return true;
+      }
+      else
+      {
+          return false;
+      }
+  }
+
   $(document).ready(function() { 
     $('.tabscarrera').click(function() {
 
