--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/menu_lateral.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/menu_lateral.html.twig
@@ -130,6 +130,12 @@
           <!-- <li><a href="{#{ path('dayscript_configuracion') }#}"><i class="fa fa-circle-o"></i> Aprobar</a></li> -->
         </ul>
       </li>
+          <li class="treeview">
+        <a href="{{path('titulacion_informacion_portal')}}">
+          <i class="fa fa-question"></i><span>Informacion del Sitio</span>
+          <i class="fa fa-angle-left pull-right"></i>
+        </a>
+      </li>
      {# {% endif %}#}
     </ul>
   </section>
