--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/notasAlumnosMateria.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/notasAlumnosMateria.html.twig
@@ -4,10 +4,9 @@
   <!-- Nav tabs -->
   <ul class="nav nav-tabs">
     <li class="active"><a  data-toggle="tab" class="tabNotas" id="notas">Consulta de Notas</a></li>
-    {%for count, parcial in arr_parcial %}
-    <li><a data-toggle="tab" class="tabNotas"  id="ingreso{{count}}">Ingreso de Notas del {{parcial.parcial}}</a></li>
-    {% endfor %}
-    {#<li><a data-toggle="tab" class="tabNotas"  id="ingreso2">Listar Alumnos</a></li>#}
+    {#{%for count, parcial in arr_parcial %}#}
+    <li><a data-toggle="tab" class="tabNotas"  id="ingreso1">Ingreso de Notas {{parcial}}</a></li>
+    {#{% endfor %}#}
   </ul>
 
   <!-- Tab panes -->
