--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/tablaEstudiantes.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/tablaEstudiantes.html.twig
@@ -1,7 +1,7 @@
 
 
 
-<div class="row " style="padding-left: 25px;">
+<div class="row col-xs-12" style="padding-left: 25px;">
                                     <div class="col-xs-4">
                                         <label class="control-label" >Docente : </label>{{docente_text}}
                                     </div>
@@ -18,7 +18,7 @@
    <div class="col-xs-12" style="margin-bottom: 20px;">
         &nbsp;
     </div>
-    <table class="table table-striped table-bordered table-hover" id="dataTables-example" border="1">
+    <table class="table table-striped table-bordered table-hover" id="dataTables-example" border="1" style="display:block;margin-right:auto;margin-left:auto">
         <thead>
             <tr>
                 <th class="text-center " style="vertical-align: middle;background-color: #337AB7;" >Codigo</th>
